[package]
name = "bevy_bilow_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha3 = "0.10.8"
lazy_static = "1.4.0"
hex = "0.4.3"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.65"
features = [
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
]

